# src/main.rs
@@ -1,5 +1,10 @@
 use crate::after_startup::after_startup;
-use crate::controller::{clipboard, comment, email, state, wechat};
+use crate::controller::clipboard;
+use crate::controller::comment;
+use crate::controller::coze;
+use crate::controller::email;
+use crate::controller::state;
+use crate::controller::wechat;
 use crate::dao::database::init_database_pool;
 use actix_web::{App, HttpServer, web};
 use anyhow::Result;
@@ -41,6 +46,7 @@ async fn main() -> Result<()> {
                         web::get().to(clipboard::get_by_wx_code),
                     )
                     .route("/clipboard", web::post().to(clipboard::save_by_id))
+                    .route("/coze/token", web::post().to(coze::get_token))
                     .service(actix_files::Files::new("/doc", "swagger").index_file("index.html")),
             )
     })
